tests/snapshots/examples_fixtures/diagnostics__suggestions__global_scope.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/suggestions/global_scope.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
