tests/snapshots/examples_fixtures/diagnostics__suggestions__multiple_similar.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/suggestions/multiple_similar.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
