tests/snapshots/examples_fixtures/diagnostics__suggestions__no_match.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/suggestions/no_match.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
