tests/snapshots/examples_fixtures/diagnostics__suggestions__prefix_match.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/suggestions/prefix_match.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
