tests/snapshots/examples_fixtures/diagnostics__suggestions__scoped_variables.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/suggestions/scoped_variables.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
