tests/snapshots/examples_fixtures/diagnostics__suggestions__simple_typo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/suggestions/simple_typo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
