tests/snapshots/examples_fixtures/diagnostics__suggestions__test_suggestions.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/suggestions/test_suggestions.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
